[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/br-icon.png" type="Texture" id=2]
[ext_resource path="res://Fonts/buttons.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/Avara.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/seta.png" type="Texture" id=5]
[ext_resource path="res://Sprites/click.png" type="Texture" id=6]
[ext_resource path="res://Fonts/DroidSans.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 65
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 7 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.22772
margin_bottom = -1.22772
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 38.0
margin_right = -40.0
margin_bottom = 92.0
alignment = 2

[node name="MenuButton" type="MenuButton" parent="HBoxContainer"]
visible = false
margin_left = 804.0
margin_right = 888.0
margin_bottom = 38.0
text = "Dificuldade"

[node name="LanguageBtn" type="Button" parent="HBoxContainer"]
margin_left = 887.0
margin_right = 931.0
margin_bottom = 54.0
toggle_mode = true
icon = ExtResource( 2 )
clip_text = true

[node name="Help" type="Button" parent="HBoxContainer"]
margin_left = 935.0
margin_right = 984.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
text = " ? "

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 0.8
margin_top = -171.0
margin_right = 0.800049
margin_bottom = 25.0

[node name="Label" type="Label" parent="CenterContainer2"]
margin_left = 214.0
margin_top = 40.0
margin_right = 810.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 1 )
text = "Brain Killer"

[node name="PlayBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.653
margin_right = 174.347
margin_bottom = 80.0
custom_fonts/font = ExtResource( 3 )
text = "Jogar"

[node name="HSBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.012
margin_top = 89.0
margin_right = 173.988
margin_bottom = 169.0
custom_fonts/font = ExtResource( 3 )
text = "Pontuações"

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 32.0975
margin_top = 21.0
margin_right = 988.098
margin_bottom = 567.0
rect_pivot_offset = Vector2( 687, 229 )

[node name="98704" type="Sprite" parent="Panel"]
position = Vector2( 541.993, 200.415 )
rotation = -1.5708
scale = Vector2( 0.195, 0.195 )
texture = ExtResource( 5 )

[node name="98707" type="Sprite" parent="Panel"]
position = Vector2( 541.993, 215.415 )
rotation = 1.5708
scale = Vector2( 0.195, 0.195 )
texture = ExtResource( 5 )

[node name="98705" type="Sprite" parent="Panel"]
position = Vector2( 116.223, 377.886 )
rotation = -0.785398
scale = Vector2( 0.195, 0.195 )
texture = ExtResource( 5 )

[node name="98708" type="Sprite" parent="Panel"]
position = Vector2( 108.927, 384.28 )
rotation = 2.35619
scale = Vector2( 0.195, 0.195 )
texture = ExtResource( 5 )

[node name="98706" type="Sprite" parent="Panel"]
position = Vector2( 544.098, 386.602 )
scale = Vector2( 0.195, 0.195 )
texture = ExtResource( 5 )

[node name="98709" type="Sprite" parent="Panel"]
position = Vector2( 529.097, 386.602 )
rotation = 3.14159
scale = Vector2( 0.195, 0.195 )
texture = ExtResource( 5 )

[node name="393234-200" type="Sprite" parent="Panel"]
position = Vector2( 126.883, 196.78 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 6 )

[node name="Label2" type="Label" parent="Panel"]
margin_top = 11.0
margin_right = 955.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tutorial"
align = 1
valign = 1

[node name="voltar" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 412.343
margin_top = -272.538
margin_right = 477.343
margin_bottom = -207.538
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "X"
flat = true

[node name="Tutorial1" type="RichTextLabel" parent="Panel"]
margin_left = 173.658
margin_top = 163.292
margin_right = 460.658
margin_bottom = 266.292
rect_pivot_offset = Vector2( 160, 28 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Toque na tela para pular os triângulos"

[node name="Tutorial2" type="RichTextLabel" parent="Panel"]
margin_left = 599.0
margin_top = 163.0
margin_right = 896.0
margin_bottom = 281.0
rect_pivot_offset = Vector2( 160, 28 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Arraste para cima e para baixo para desviar dos quadrados"

[node name="Tutorial3" type="RichTextLabel" parent="Panel"]
margin_left = 169.415
margin_top = 334.732
margin_right = 466.415
margin_bottom = 458.732
rect_pivot_offset = Vector2( 160, 28 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Arraste na diagonal para fazer a espiral rodar, não a deixe parada por 10s"

[node name="Tutorial4" type="RichTextLabel" parent="Panel"]
margin_left = 599.172
margin_top = 330.39
margin_right = 920.172
margin_bottom = 454.39
rect_pivot_offset = Vector2( 160, 28 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Arraste para a direita se a equação estiver correta e para a esquerda se estiver incorreta"

[node name="HighScore" type="Label" parent="."]
show_behind_parent = true
margin_left = 1.0
margin_top = 27.0
margin_right = 1026.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
text = "Pontuação:"
align = 1

[node name="score" type="Label" parent="HighScore"]
margin_left = 684.314
margin_top = 0.822237
margin_right = 720.314
margin_bottom = 77.8223
custom_fonts/font = SubResource( 2 )
text = "0"

[connection signal="pressed" from="HBoxContainer/LanguageBtn" to="." method="_on_LanguageBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="HSBtn" to="." method="_on_HSBtn_pressed"]
[connection signal="pressed" from="Panel/voltar" to="." method="_on_voltar_pressed"]
